[gd_scene load_steps=10 format=3 uid="uid://c41aom2aawpr7"]

[ext_resource type="Script" path="res://scenes/world/world.gd" id="1_u0fan"]
[ext_resource type="Texture2D" uid="uid://cc402w7xecd23" path="res://scenes/world/background.jpg" id="2_56c0x"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_usjvi"]
panorama = ExtResource("2_56c0x")

[sub_resource type="Sky" id="Sky_gpbmk"]
sky_material = SubResource("PanoramaSkyMaterial_usjvi")

[sub_resource type="Environment" id="Environment_1pb83"]
background_mode = 2
background_energy_multiplier = 2.0
sky = SubResource("Sky_gpbmk")
ambient_light_source = 2
ambient_light_color = Color(0, 0.266667, 0.388235, 1)
tonemap_mode = 2
glow_enabled = true
glow_normalized = true
volumetric_fog_density = 0.01

[sub_resource type="SphereShape3D" id="SphereShape3D_2fli3"]
radius = 100.0

[sub_resource type="SphereMesh" id="SphereMesh_c1fvw"]
radius = 100.0
height = 200.0
radial_segments = 32
rings = 16

[sub_resource type="SphereShape3D" id="SphereShape3D_an7ms"]
radius = 20.0

[sub_resource type="SphereMesh" id="SphereMesh_sd4a1"]
radius = 20.0
height = 40.0
radial_segments = 32
rings = 16

[node name="World" type="Node3D"]
script = ExtResource("1_u0fan")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1pb83")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 392.0
offset_top = 243.0
offset_right = -392.0
offset_bottom = -243.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu
"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "JOIN"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player/player.tscn")
spawn_path = NodePath("..")

[node name="planet" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -219, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="planet"]
shape = SubResource("SphereShape3D_2fli3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="planet"]
mesh = SubResource("SphereMesh_c1fvw")

[node name="planet2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 184, 0, -355)

[node name="CollisionShape3D" type="CollisionShape3D" parent="planet2"]
shape = SubResource("SphereShape3D_an7ms")

[node name="MeshInstance3D" type="MeshInstance3D" parent="planet2"]
mesh = SubResource("SphereMesh_sd4a1")

[connection signal="button_up" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_button_up"]
[connection signal="button_up" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_button_up"]
